[ Formación ] » Código refactorizado

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -767,7 +767,7 @@ header {
             position: relative;
             bottom: 25px;
             transform: rotateZ(-50deg);
-            width: 30px;
+            width: 100%;
             transition: color .5s;
             cursor: pointer;
 
