--- a/css/styles.scss
+++ b/css/styles.scss
@@ -59,8 +59,8 @@ section {
 }
 
 p, li {
-    font-size: 18px;
-    line-height: 45px;
+    font-size: 15px;
+    line-height: 35px;
     margin: 0;
 
     strong {
@@ -108,6 +108,12 @@ h3 {
 }
 
 @media only screen and (min-width: $tablet) {
+    
+    p {
+        font-size: 18px;
+        line-height: 45px;
+    }
+
     h3 {
         font-size: 75px;
     }
@@ -528,7 +534,6 @@ header {
 // ────────────────── //
 
 #bienvenida {
-    padding-bottom: 0;
 
     .tarjetas {
         display: flex;
@@ -547,7 +552,7 @@ header {
             background-color: $gris-claro;
             border-top: 6px solid $gris;
             padding: 55px 30px;
-            margin: 0 auto 150px;
+            margin: 0 auto 75px;
             position: relative;
             width: 275px;
             transition: .5s;
