--- a/css/styles.scss
+++ b/css/styles.scss
@@ -63,8 +63,31 @@ p, li {
     line-height: 35px;
     margin: 0;
 
+    u {
+        color: $dorado;
+        text-decoration: none;
+    }
+
     strong {
         font-weight: normal;
+    }
+}
+
+ul {
+    list-style: none;
+    margin: 0 0 25px;
+
+    li::before {
+        content: "";
+        display: inline-block;
+        background: $dorado;
+        margin-right: -8px;
+        position: relative;
+        right: 17px;
+        bottom: 2px;
+        width: 5px;
+        height: 5px;
+        opacity: .5;
     }
 }
 
@@ -94,6 +117,16 @@ h3 {
     }
 }
 
+h4 {
+    display: inline-block;
+    color: $dorado;
+    font-size: 15px;
+    border-bottom: 1px solid rgba(193,143,89,.25);
+    line-height: 35px;
+    padding: 0 10px 10px;
+    margin: 0 0 25px;
+}
+
 // Mobile First
 
 @media only screen and (min-width: $mobile) {
@@ -109,13 +142,18 @@ h3 {
 
 @media only screen and (min-width: $tablet) {
     
-    p {
+    p, li {
         font-size: 18px;
         line-height: 45px;
     }
 
     h3 {
         font-size: 75px;
+    }
+
+    h4 {
+        font-size: 18px;
+        line-height: 45px;
     }
 }
 
@@ -144,6 +182,10 @@ h3 {
         width: 100%;
         opacity: .5;
     }
+}
+
+.marginless {
+    margin: 0 !important;
 }
 
 .z-index-50 {
@@ -1408,7 +1450,7 @@ footer {
 
 @media only screen and (min-width: $mobile) {
     footer{
-        margin-bottom: 60px;
+        margin-bottom: 48px;
     }
 }
 
@@ -1418,57 +1460,18 @@ footer {
     }
 }
 
-/* ───────────── */
-/*     LEGAL     */
-/* ───────────── */
+// ───────────── //
+//     LEGAL     //
+// ───────────── //
 
-#legal h3 {
-    margin: 50px 0 25px;
-}
-
-#legal h3:first-child {
-    margin: 0 0 25px;
-}
-
-#legal p {
-    margin: 0 0 25px;
-}
-
-#legal p:last-child {
-    margin: 0;
-}
-
-#legal ul {
-    list-style: none;
-    margin: 0 0 25px;
-}
-
-#legal ul li::before {
-    content: "";
-    display: inline-block;
-    background: $dorado;
-    margin-right: -8px;
-    position: relative;
-    right: 17px;
-    bottom: 2px;
-    width: 5px;
-    height: 5px;
-    opacity: .5;
-}
-
-#legal ul li u {
-    color: $dorado;
-    text-decoration: none;
-}
+#legal p { margin-bottom: 25px }
 
 #legal a {
     color: $dorado;
     text-decoration: none;
     transition: .5s;
-}
 
-#legal a:hover {
-    opacity: .75;
+    &:hover { opacity: .75 }
 }
 
 // ────────────────── //
